# zero2prod-email-newsletter

./: .env  Cargo.toml  Dockerfile  configuration.yaml  spec.yaml
configuration/: base.yaml
scripts/: init_db.sh
src/: configuration.rs  main.rs  startup.rs  telemetry.rs
src/domain/: mod.rs  new_subscriber.rs  subscriber_email.rs  subscriber_name.rs
src/routes/: mod.rs
src/routes/diagnostics/: mod.rs
src/routes/newsletter/: mod.rs  subscribe.rs
tests/: health_check.rs
