[package]
name = "zero2prod-email-newsletter"
version = "0.1.0"
edition = "2024"

[[bin]]
path = "src/main.rs"
name = "zero2prod-email-newsletter"

[dependencies]
actix-web = "4"
reqwest = "0.13.4"
tokio = "1.52.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
config = "0.14"

[dependencies.sqlx]
version = "0.8"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate"
]