[package]
name = "zero2prod-email-newsletter"
version = "0.1.0"
edition = "2024"

[[bin]]
path = "src/main.rs"
name = "zero2prod-email-newsletter"

[dependencies]
actix-web = "4"
reqwest = "0.13.4"
tokio = "1.52.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
config = "0.14"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4.45", default-features = false, features  = ["clock"] }
tracing = { version = "0.1.44", features = ["log"] }
tracing-subscriber = { version = "0.3.23", features = [ "registry", "env-filter" ]}
tracing-bunyan-formatter = "0.3.10"
tracing-log = "0.2"
secrecy = { version = "0.8", features = ["serde"] }
tracing-actix-web = "0.7"
serde-aux = "4.7.0"

[dependencies.sqlx]
version = "0.8"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate"
]
